resolve failing @media on mobile bug

--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -18,6 +18,10 @@
 		border: none !important;
 		box-shadow: none !important;
 	}
+
+	.login .form-content ul {
+		width: 0px !important;
+	}
 }
 
 .login .container {
